<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.netbeans.html.demo</groupId>
    <artifactId>node4j</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <exec.java.bin>${java.home}/bin/node</exec.java.bin>
        <project.mainclass>org.netbeans.demo.node4j.Launcher</project.mainclass>
        <jshell.agent>-Djshell=false</jshell.agent>
        <exec.debug.arg>-Dnodebug</exec.debug.arg>
        <jshell.run.show>true</jshell.run.show>
    </properties>
    <repositories>
        <repository>
            <id>presenter-snapshots</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>html4j-snapshots</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
            <url>https://maven.java.net/content/repositories/snapshots/</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <executable>${exec.java.bin}</executable>
                    <classpathScope>test</classpathScope>
                    <arguments>
                        <argument>-J${jshell.agent}</argument>
                        <argument>-J${exec.debug.arg}</argument>
                        <argument>-J-javaagent:${project.build.directory}/springloaded.jar</argument>
                        <argument>-J-Xverify:none</argument>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>${basedir}/src/main/js/launcher.js</argument>
                        <argument>${project.mainclass}</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.springframework</groupId>
                                    <artifactId>springloaded</artifactId>
                                    <version>1.2.3.RELEASE</version>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <destFileName>springloaded.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.dukescript.libraries</groupId>
            <artifactId>net.java.html.lib.node</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.html</groupId>
            <artifactId>net.java.html.boot.truffle</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
</project>